--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,8 +4,11 @@
 @import "susy_setup";
 @import "font-awesome";
 
+@import "variables";
 @import "colors";
 @import "fonts";
 @import "base";
+
+@import "header";
 @import "layout";
 
