--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,9 +1,16 @@
+*, *:before, *:after {
+	@include box-sizing(border-box);
+}
+
 body {
-	@include container(80em);
 	font-family: $proxima;
 	color: $gray;
 }
 
 h4 {
 	color: $blue;
+}
+
+a {
+	text-decoration: none;
 }
