--- a/app/assets/stylesheets/colors.css.scss
+++ b/app/assets/stylesheets/colors.css.scss
@@ -1,7 +1,8 @@
-$red:			#ec7268;
-$blue:		#81a2d7;
-$green: 	#7bcd7b;
-$yellow:	#fdba4a;
+$red:							#ec7268;
+$blue:						#81a2d7;
+$green: 					#7bcd7b;
+$yellow:					#fdba4a;
+$vlight-yellow: 	#FDF2E0;
 
 $vvlight-gray:  #e5e5e5;
 $vlight-gray: 	#ccc;
