--- a/app/assets/stylesheets/susy_setup.css.scss
+++ b/app/assets/stylesheets/susy_setup.css.scss
@@ -4,4 +4,7 @@ $susy: (
   math: fluid,
   output: float,
   gutter-position: inside,
+  global-box-sizing: border-box
 );
+
+@include border-box-sizing;
