--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,9 +9,7 @@
 				%h6 The best kids internet, every day
 		%section.menu
 			%ul
-				%li About
-				%li 
-					=link_to(posts_path) do 
-						%i.fa.fa-plus
+				%li.menu-about
+					=link_to 'About', '#'
 				%li 
 					%i.fa.fa-user
