--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 $proxima: 'Montserrat', sans-serif;
 
-body, p, a, li, input {
+body, p, a, li, input, button {
 	font-size: 1rem;
 }
 
