--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,7 +8,9 @@
 			.logo-tagline
 				%h6 The best kids internet, every day
 		%section.menu
-			%ul
+			%ul.menu-list
+				/ %li
+				/ 	%i.fa.fa-plus#new-post
 				%li.menu-about
 					=link_to 'About', '#'
 				%li 
