--- a/app/assets/stylesheets/colors.css.scss
+++ b/app/assets/stylesheets/colors.css.scss
@@ -4,6 +4,7 @@ $green: 					#7bcd7b;
 $yellow:					#fdba4a;
 $vlight-yellow: 	#FDF2E0;
 
+$slight-gray:		#f5f5f5;
 $vvlight-gray:  #e5e5e5;
 $vlight-gray: 	#ccc;
 $light-gray:		#aaa;
