--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,10 @@
 
 	%body
 		= render 'layouts/header'
+		.page-container
+			= render 'layouts/messages'
+
 		#container
+
+		.page-container
 			= yield
