--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,4 +1,4 @@
-#container {
+#container, .page-container {
 	@include container(60em);
 	margin-top: 40px;
 }
@@ -83,3 +83,57 @@ body {
 	}
 	button { margin-top: 10px;}
 }
+
+// Messages
+
+.alert {
+	display: inline-block;
+	border: 3px solid $vvlight-gray;
+	padding: 10px 25px;
+	@include border-radius($normal-radius)
+}
+
+.alert-notice {
+	color: $green;
+}
+
+.alert-alert {
+	color: $red;
+}
+
+// Devise forms
+
+.devise-form {
+	border: 3px solid $vvlight-gray;
+	padding: 50px;
+	@include border-radius($normal-radius);
+	width: 90%;
+	max-width: 600px;
+	margin: 0 auto;
+
+	.devise-form-header {
+		margin-bottom: 20px;
+	}
+	
+	input {
+		height: 40px;
+		margin-bottom: 20px;
+		padding: 10px 20px;
+		outline: none;
+	}
+	input[type="checkbox"] {
+		margin-top: -2px;
+		margin-bottom: 0;
+	}
+
+	label  {
+		line-height: 40px;
+		height: 40px;
+	}
+
+	.btn {
+		margin-top: 15px;
+		padding: 7px 30px;
+	}
+}
+
